# hamcast-for-libcppa

./: .gitignore  CMakeLists.txt  FindLibHamcast.cmake  README.md  configure  hamcast-for-libcppa.files
examples/: CMakeLists.txt  FindLibhamcast_for_libcppa.cmake  group_chat.cpp
hc_cppa/: hamcast_group_module.hpp
src/: hamcast_group_module.cpp
